[workspace]
members = ["libs/libwifi", "libs/libwifi_macros", "libs/pcap-file"]

[workspace.package]
version = "0.1.0"
authors = ["Ryan Butler"]
description = "80211 Attack Training Tool"
license = "MIT"
edition = "2021"
rust-version = "1.62"

[package]
name = "angry_trainer"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "angrytrainer"
path = "src/main.rs"

[dependencies]
libwifi = { version = "0.3.1", path = "libs/libwifi" }
pcap-file = { version = "2.0.0", path = "libs/pcap-file" }
byteorder = "1.5.0"
libc = "0.2.149"
nix = { version = "0.27.1", features = [
    "socket",
    "ioctl",
    "net",
    "fs",
    "user",
] }
radiotap = "1.3.0"
anyhow = "1.0.75"
neli = "0.6.4"
neli-proc-macros = "0.1.0"
hex = "0.4.3"
rand = "0.8.5"
ctrlc = "3.4.1"
chrono = "0.4.31"
crc = "3.0.1"
clap = { version = "4.4.10", features = ["derive"] }
strum = "0.25.0"
strum_macros = "0.25.3"
mac_oui = { version = "0.4.8", features = ["with-db"] }
derive_setters = "0.1.6"
itertools = "0.12.0"
uuid = { version = "1.6.1", features = ["v4"] }
crc32fast = "1.3.2"
flate2 = { version = "1.0.28", features = ["zlib"] }
tar = "0.4.40"
nl80211-ng = "0.2.3"
procfs = "0.16.0"
uname = "0.1.1"
globset = "0.4.14"
